--- a/index.html
+++ b/index.html
@@ -31,10 +31,13 @@
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="content">
-            <h1>    Koni Bot Is Coming Soon Please Wait Till Release A Timer will be showen below!</h1>
-        </div>
-    </body>
+  <div class="content">
+    <h1>Coming soon, stay tuned!</h1>
+  </div>
+
+
+
+</body>
 </html>
 
 <!-- i think its finished but if you need a timer we need to find some to skid idk-->
