--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <meta name="twitter:description" content="Konibot - Coming Soon">
         <meta name="twitter:image" content="https://aimbot.design/aimbanner.png">
         <!-- Styles and fonts -->
-        <link rel="stylesheet" href="https://konibot.xyz/style.css">
+        <link rel="stylesheet" href="https://dis.gg/style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
@@ -32,7 +32,7 @@
     </head>
     <body>
   <div class="content">
-    <h1>Coming soon, stay tuned!</h1>
+    <h1>Koni is coming soon, stay turned</h1>
   </div>
 
 
