--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="Konibot">
         <meta name="twitter:description" content="Konibot - Coming Soon">
-        <meta name="twitter:image" content="https://aimbot.design/aimbanner.png">
+        <meta name="twitter:image" content="https://konibot.xyz/icon.png">
         <!-- Styles and fonts -->
-        <link rel="stylesheet" href="https://dis.gg/style.css">
+        <link rel="stylesheet" href="https://konibot.xyz/style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
