--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 			endtimeHours: 10,
 			endtimeMinutes: 30,
 			endtimeSeconds: 60,
-			timeZone: "America/New_York" 
+			timeZone: "" 
 			// ex:  timeZone: "America/New_York", can be empty
 			// go to " http://momentjs.com/timezone/ " to get timezone
 		});
