--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
 		$('.cd100').countdown100({
 			// Set Endtime here
 			// Endtime must be > current time
-			endtimeYear: 2020,
-			endtimeMonth: 10,
-			endtimeDate: 19/10/2020,
+			endtimeYear: 0,
+			endtimeMonth: 0,
+			endtimeDate: 14,
 			endtimeHours: 10,
 			endtimeMinutes: 30,
 			endtimeSeconds: 60,
