--- a/server.html
+++ b/server.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <!-- Redirect -->
-        <meta http-equiv="Refresh" content="0; url='Put the invite link hererere'" />
+        <meta http-equiv="Refresh" content="0; url='https://discord.gg/xFcA5r4'" />
     </head>
     <body>
-        <h1><a href="Put the discord invite link here"></a>Click Here if you are not redirected in 2 seconds...</h1>
+        <h1><a href="https://discord.gg/xFcA5r4"></a>Click Here if you are not redirected in 2 seconds...</h1>
     </body>
 </html>
 
