--- a/server.html
+++ b/server.html
@@ -5,7 +5,7 @@
         <meta http-equiv="Refresh" content="0; url='https://discord.gg/xFcA5r4'" />
     </head>
     <body>
-        <h1><a href="https://discord.gg/xFcA5r4"></a>Click Here if you are not redirected in 2 seconds...</h1>
+        <h1><a href="https://discord.gg/xFcA5r4">Click here if you are not redirected in 2 seconds...</a></h1>
     </body>
 </html>
 
