--- a/server.html
+++ b/server.html
@@ -3,6 +3,13 @@
     <head>
         <!-- Redirect -->
         <meta http-equiv="Refresh" content="0; url='https://discord.gg/xFcA5r4'" />
+        <meta property="og:url" content="https://discord.gg/xFcA5r4">
+        <meta property="og:site_name" content="konibot.xyz">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="Konibot">
+        <meta property="og:description" content="Konibot - Discord Server">
+        <meta property="og:image" content="https://konibot.xyz/icon.png">
+        <meta name="theme-color" content="#f70000">
     </head>
     <body>
         <h1><a href="https://discord.gg/xFcA5r4">Click here if you are not redirected in 2 seconds...</a></h1>
