--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@ body {
 <body>
 
 <div class="header">
-  <a href="#default" class="logo">CompanyLogo</a>
+  <a href="#default" class="logo">Koni</a>
   <div class="header-right">
     <a class="active" href="#home">Home</a>
-    <a href="#contact">Contact</a>
-    <a href="#about">About</a>
+    <a href="https://konibot.statuspage.io">Status</a>
+    <a href="https://discord.com/api/oauth2/authorize?client_id=765172493555990559&permissions=8&scope=bot">Bot Invite</a>
   </div>
 </div>
 
