--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@ body {
 
 	
 	
+	<div id="time">
+
+</div>
 	<div class="bg-g1 size1 flex-w flex-col-c-sb p-l-15 p-r-15 p-t-55 p-b-35 respon1">
 		<span></span>
 		<div class="flex-col-c p-t-50 p-b-50">
