--- a/server.html
+++ b/server.html
@@ -8,7 +8,7 @@
         <meta property="og:type" content="website">
         <meta property="og:title" content="Konibot">
         <meta property="og:description" content="Konibot - Discord Server">
-        <meta property="og:image" content="https://konibot.xyz/icon.png">
+        <meta property="og:image" content="https://konibot.xyz/images/icons/favicon.ico">
         <meta name="theme-color" content="#f70000">
     </head>
     <body>
