--- a/beta/index.html
+++ b/beta/index.html
@@ -3,13 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Open Graph Metatags -->
+	<meta property="og:url" content="https://konibot.xyz">
+	<meta property="og:site_name" content="konibot.xyz">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="Konibot">
+	<meta property="og:description" content="Konibot - Beta Page">
+	<meta property="og:image" content="https://konibot.xyz/images/icons/favicon.ico">
+	<meta name="theme-color" content="#f70000">
+	<!-- Open Graph Twitter Metatags -->
+	<meta property="twitter:url" content="https://konibot.xyz">
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="Konibot">
+	<meta name="twitter:description" content="Konibot - Beta Page">
+    <meta name="twitter:image" content="https://konibot.xyz/images/icons/favicon.ico">
+    <!-- Styles and Shit -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/now-ui-kit.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,600,700,800,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700,800,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,600,700,800,900&display=swap" rel="stylesheet">
-    <title>Your bot name</title>
+    <title>Konibot Beta Page</title>
+    <link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-transparent">
