--- a/beta/index.html
+++ b/beta/index.html
@@ -68,8 +68,8 @@
 <div class="heading">
     <h1 class="display-5 title">It's time to use Bot in your server.</h1>
     <p class="subtitle">Bot is a multi-purpose bot ready to skill up and boost up your Discord server<br />Also features auto-moderation, administration, music and much more!</p>
-    <a class="btn btn-primary btn-lg" href="#start_link" target="_blank" role="button">Get started</a>
-    <a class="btn btn-secondary btn-lg" href="#server_link" target="_blank" role="button">Add to server</a>
+    <a class="btn btn-primary btn-lg" href="https://konibot.xyz/server" target="_blank" role="button">Get started</a>
+    <a class="btn btn-secondary btn-lg" href="https://konibot.xyz/invite" target="_blank" role="button">Add to server</a>
     <br /><br /><br /><br /><br /><br />
 </div>
 <div class="features">
@@ -125,16 +125,15 @@
                 <div class="title">Ready to try Bot?</div>
                 <div class="subtitle">Invite Bot and start giving your server cool perks!</div>
                 <br />
-                <a class="btn btn-primary btn-lg" href="#start_link" role="button">Get started</a>
+                <a class="btn btn-primary btn-lg" href="https://konibot.xyz/server" role="button">Get started</a>
             </div><br />
         </div>
     </div>
     <div class="footer">
         <div class="bot-footer">
-            <img src="assets/BotLogoWord.svg" width="150"><br />
-            Copyright © [BotOwner] - 2020
+            <img src="assets/304001353130201.jpg width="150"><br />
+            Copyright © Koni Bot - 2020
         </div><br/>
-        <div class="nouridio">design by <a href="https://twitter.com/Nouridio"> nouridio</a></div>
     </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
