--- a/beta/index.html
+++ b/beta/index.html
@@ -131,7 +131,7 @@
     </div>
     <div class="footer">
         <div class="bot-footer">
-            <img src="assets/304001353130201.jpg width="150"><br />
+            <img src="assets/304001353130201.svg width="150"><br />
             Copyright © Koni Bot - 2020
         </div><br/>
     </div>
