--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="Konibot">
 	<meta property="og:description" content="Konibot - Coming Soon!">
-	<meta property="og:image" content="https://konibot.xyz/images/icons/favicon.ico">
+	<meta property="og:image" content="/images/icons/favicon.ico">
 	<meta name="theme-color" content="#f70000">
 	<!-- Open Graph Twitter Metatags -->
 	<meta property="twitter:url" content="https://konibot.xyz">
