--- a/invite.html
+++ b/invite.html
@@ -6,11 +6,11 @@
         <meta property="og:site_name" content="konibot.xyz">
         <meta property="og:type" content="website">
         <meta property="og:title" content="Konibot">
-        <meta property="og:description" content="Konibot - Discord Server">
+        <meta property="og:description" content="Konibot - Discord Bot">
         <meta property="og:image" content="https://konibot.xyz/images/icons/favicon.ico">
         <meta name="theme-color" content="#f70000">
     </head>
     <body>
-        <h1><a href="https://discord.com/api/oauth2/authorize?client_id=765172493555990559&permissions=8&redirect_uri=https%3A%2F%2Fkonibot.xyz%2Foauth%2Fdone&response_type=code&scope=bot%20guilds.join">Click here if you are not redirected in 2 seconds...</a></h1>
+        <h1><a href="https://discord.com/oauth2/authorize?client_id=757268511197495438&permissions=8&scope=bot">Click here if you are not redirected in 2 seconds...</a></h1>
     </body>
 </html>
