--- a/server.html
+++ b/server.html
@@ -12,8 +12,8 @@
         <meta name="theme-color" content="#f70000">
     </head>
     <body>
-        <h1><a href="https://discord.gg/xFcA5r4">Click here if you are not redirected in 2 seconds...</a></h1>
+        <h1><a href="https://discord.gg/eFAZqrW">Click here if you are not redirected in 2 seconds...</a></h1>
     </body>
 </html>
 
-<!-- ok https://github.com/kgiszewski/Live-Stream-Web-Plugins/tree/master/Date%20and%20Time/Countdown%20Timer count down timer-->
+
