--- a/upvote.html
+++ b/upvote.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,600,700,800,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700,800,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,600,700,800,900&display=swap" rel="stylesheet">
-    <title>KoniBot.XYZ</title>
+    <title>Upvote Koni!</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-transparent">
@@ -46,7 +46,7 @@
     </nav>
 <center>
 <div class="headingabout">
-    <h1 class="display-5 title">Upvote Koni From Here below!.</h1><br>
+  <h1 class="display-5 title"><strong>Upvote Koni From Here below!.</strong></h1><br>
     
     <script src="https://discordbotlist.com/widget/index.js" async></script>
 <dbl-widget bot-id="bot-koni" centered></dbl-widget>
