--- a/upvote.html
+++ b/upvote.html
@@ -48,8 +48,11 @@
 <div class="headingabout">
   <h1 class="display-5 title"><strong>Upvote Koni From Here below!.</strong></h1><br>
     
-    <script src="https://discordbotlist.com/widget/index.js" async></script>
+    <script src="https://discord.boats/api/widget/757268511197495438" async></script>
+<centered></dbl-widget>
+      <script src="https://discordbotlist.com/widget/index.js" async></script>
 <dbl-widget bot-id="bot-koni" centered></dbl-widget>
+  
 </div>
 </center>
     <div class="footer">
