--- a/upvote.html
+++ b/upvote.html
@@ -52,6 +52,9 @@
 <centered></dbl-widget>
       <script src="https://discordbotlist.com/widget/index.js" async></script>
 <dbl-widget bot-id="bot-koni" centered></dbl-widget>
+  <a href="https://dbots.co/bots/757268511197495438">
+  <img src="https://dbots.co/api/v1/bots/757268511197495438/widget?size=large" alt="View on DBots">
+</a>
   
 </div>
 </center>
